--- a/src/main/resources/diff-config.properties
+++ b/src/main/resources/diff-config.properties
@@ -1,2 +1,2 @@
-# Список защищенных классов/пакетов
+# List of protected classes/packages
 protected.paths=src/main/java/ru/melon_egoist/management/, src/main/java/ru/melon_egoist/Backend
