--- a/build.gradle
+++ b/build.gradle
@@ -181,10 +181,13 @@ tasks.register('generateChecksums') {
     }
 }
 
+
 tasks.register('updateManifest', Jar) {
-    notCompatibleWithConfigurationCache("Использует внешние команды")
     group = 'Documentation'
     description = 'Update MANIFEST.MF with hash sums'
+
+    notCompatibleWithConfigurationCache("Uses external commands")
+
     dependsOn tasks.named('jar'), tasks.named('generateChecksums')
     archiveClassifier = 'updated'
 
@@ -220,7 +223,7 @@ tasks.register('packageJavadoc', Zip) {
     from tasks.named('javadoc')
 }
 
-// task doc
+// ✅ task doc
 tasks.register('doc') {
     group = 'Documentation'
     description = 'Complete documentation generation process'
@@ -236,14 +239,15 @@ tasks.register('doc') {
     }
 }
 
+
 tasks.named('javadoc', Javadoc) {
     options {
         encoding = 'UTF-8'
         addBooleanOption('html5', true)
         addStringOption('Xdoclint:none', '-quiet')
         links = [
-//                'https://docs.oracle.com/en/java/javase/17/docs/api/',
-//                'https://docs.spring.io/spring-framework/docs/current/javadoc-api/'
+                'https://docs.oracle.com/en/java/javase/17/docs/api/',
+                'https://docs.spring.io/spring-framework/docs/current/javadoc-api/'
         ]
     }
 
