--- a/build.gradle
+++ b/build.gradle
@@ -254,7 +254,7 @@ tasks.named('javadoc', Javadoc) {
     exclude '**/internal/**'
 }
 
-// task xml
+// ✅ task xml
 tasks.register('xml') {
     group = 'Verification'
     description = 'Validates all XML files in the project'
@@ -286,18 +286,19 @@ tasks.register('xml') {
     }
 }
 
-//TODO refactor build
-
-tasks.register('buildCustom', Jar) {
+// ✅ task build
+tasks.register('myBuild', Jar) {
     group = 'Build'
     description = 'Creating an executable JAR'
+
     dependsOn tasks.named('myCompile')
 
-    archiveBaseName = "${project.name}"
-    archiveVersion = '1.0'
+    archiveBaseName = project.name
+    archiveVersion = "${project.version}"
+
     manifest {
         attributes(
-                'Main-Class': 'com.example.Main',
+                'Main-Class': 'ru.melon_egoist.Backend',
                 'Created-By': 'Gradle Custom Build'
         )
     }
@@ -307,13 +308,8 @@ tasks.register('buildCustom', Jar) {
     from sourceSets.main.resources
 
     doLast {
-        println "JAR built: ${archiveFile.get().asFile.absolutePath}"
+        println "✅ JAR built: ${archiveFile.get().asFile.absolutePath}"
     }
-}
-
-// task build
-tasks.register('myBuild') {
-    dependsOn tasks.named('buildCustom')
 }
 
 // task clean
